--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
-    background: grey;
+    background: rgb(37, 29, 29);
+    color:yellow;
 }
 
 .title {
@@ -12,15 +13,29 @@ body {
     justify-content: center;
     align-items: center;
     gap: 1em;
+    padding: 0px;
 }
 
 button {
     color: blue;
     font-size: 40px;
+    padding: 0px;
+    margin: 0px;
+    border-radius: 50px;
+
 }
 
 #container {
     margin: 1em 0 1em 0;
     text-align: center;
     font-size: 30px;
+}
+
+.images {
+    display: flex;
+    flex: 1;
+    width:200px;
+    height:200px;
+    border-radius: 50px;
+   
 }
